--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 <body>
     <header>
         <h1>Git Example</h1>
+        <p>awesome header</p>
     </header>
+    <main>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum perferendis voluptatibus nulla, architecto
+            harum illo quia porro cupiditate ut, eos nisi modi neque ratione optio ipsam nesciunt quo, doloremque saepe!
+        </p>
+    </main>
 
 </body>
 
